--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
             "dest": "main.py"
         },
         {
+            "src": "/",
+            "dest": "/static/index.html"
+        },
+        {
             "src": "/(.*)",
             "dest": "/static/$1"
         }
