Refactor for Vercel: api/index.py and public/ structure, data URI response

--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,8 @@
 {
-    "builds": [
+    "rewrites": [
         {
-            "src": "main.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "static/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "main.py"
-        },
-        {
-            "src": "/",
-            "dest": "/static/index.html"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/static/$1"
+            "source": "/api/(.*)",
+            "destination": "/api/index.py"
         }
     ]
 }
